<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollViewDetail"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- CollapsingToolbarLayout -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextColor="@color/white"
            app:collapsedTitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp">

            <ImageView
                android:id="@+id/ivMediaCover"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:alpha="1.0"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#80000000" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingTop="0dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@null"
                app:layout_collapseMode="pin">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_back_button"
                    android:layout_gravity="start|center_vertical"
                    android:contentDescription="@string/back_button"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginStart="8dp"
                    app:tint="@color/white" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Konten Detail Acara -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Judul Acara -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="8dp" />

            <!-- Pemilik Acara -->
            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_owner_name"
                android:textAlignment="center"
                android:layout_marginBottom="8dp" />

            <!-- LinearLayout untuk Kuota dan Waktu -->
            <LinearLayout
                android:id="@+id/LayoutQuotaTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tvRemainingQuota"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/remaining_quota"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tvQuota"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/quota"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="center" />
            </LinearLayout>

            <!-- Waktu Mulai -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_time"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp" />
            <TextView
                android:id="@+id/tvBeginTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_time"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp" />

            <!-- Deskripsi Acara -->
            <TextView
                android:id="@+id/tvEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:layout_marginBottom="16dp" />

            <!-- ProgressBar -->
            <ProgressBar
                android:id="@+id/progressBarDetail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

            <!-- Tombol Daftar -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:maxWidth="250dp"
                android:text="@string/register"

                android:layout_marginBottom="32dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_border"
        android:contentDescription="@string/title_favorite"
        android:layout_margin="16dp"
        app:layout_anchorGravity="bottom|end"
        app:layout_anchor="@id/ivMediaCover"
        app:tint="@color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
