<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ui.setting.SettingFragment"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/layout_appearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="vertical">-->

        <TextView
            android:id="@+id/tv_appearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearance"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_appearance_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearance_subtitle"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="14sp" />
<!--    </LinearLayout>-->


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_daily_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_appearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_reminder"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_notification"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="14sp" />
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_daily_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color"/>
    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>
